Rewrite implementation to be less intrusive and more reliable

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,6 @@
-org.gradle.jvmargs = -Xmx3G -XX:MaxPermSize=2G -Dfile.encoding=UTF-8
-org.gradle.logging.level = debug
-org.gradle.warning.mode = all
+kapt.use.worker.api = true
 org.gradle.console = verbose
-
-mod = 2.0.0
-loom = 0.2.6-SNAPSHOT
-game = 1.14.4
-mappings = build.14
-loader = 0.6.3+build.168
-jsr305 = 3.0.2
+org.gradle.jvmargs = -Xmx4G -Dfile.encoding=UTF-8
+org.gradle.logging.level = info
+org.gradle.parallel = true
+org.gradle.warning.mode = all
