Add support for 1.16.2, include mandatory license metadata

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,6 @@
 modLoader="javafml"
 loaderVersion="[28,)"
+license="Apache-2.0"
 [[mods]]
   modId="iknowwhatimdoing"
   version="${file.jarVersion}"
