--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 org.gradle.console = verbose
-org.gradle.daemon = false
-org.gradle.jvmargs = -Xmx3G -XX:MaxPermSize=2G -Dfile.encoding=UTF-8
-org.gradle.logging.level = debug
+org.gradle.jvmargs = -Xmx4G -Dfile.encoding=UTF-8
+org.gradle.logging.level = info
+org.gradle.parallel = true
 org.gradle.warning.mode = all
